# uludag

branches/kde/kaptan/2/: CMakeLists.txt  ChangeLog  TODO
branches/kde/kaptan/2/po/: CMakeLists.txt  ca.po  de.po  es.po  fr.po  it.po  kaptan.pot  nl.po  pl.po  pt_BR.po  tr.po
branches/kde/kaptan/2/src/: goodbye.cpp  goodbyedlg.ui  kaptan.cpp  kaptan.desktop  kaptan.h  mousedlg.ui  network.cpp  style.cpp  styledlg.ui  wallpaper.cpp  wallpaperdlg.ui  welcome.h
branches/kde/knazar/kde4/src/: CMakeLists.txt  knazar.cpp  knazar.desktop  knazar.h  main.cpp  tr.org.pardus.knazar.xml
branches/kde/sysinfo/2008/comarNetworkStatus/: Makefile.am  README  comarNetworkStatus.cpp  comarNetworkStatus.desktop  comarNetworkStatus.h
branches/kde/sysinfo/corporate2/sysinfo/: Makefile.am  ksysinfopart.cpp  ksysinfopart.desktop  sysinfo.cpp  sysinfo.h  sysinfo.protocol  x-sysinfo.desktop
branches/l10n/kde/3.5.x/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
branches/l10n/kde/3.5.x/admin/: acinclude.m4.in  cvs.sh
branches/l10n/kde/3.5.x/data/: Makefile.in
branches/l10n/kde/3.5.x/docs/: Makefile.am  Makefile.in
branches/l10n/kde/3.5.x/messages/: Makefile.in  entry.desktop
tags/BLACKHOLE/autorun/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac
tags/BLACKHOLE/autorun/daemon/: Makefile.am  autorun.c  autorun.conf  config.c  config.l  device.c  module.c  utils.c
tags/BLACKHOLE/autorun/include/: autorun.h  config.h  device.h  module.h  utils.h
tags/BLACKHOLE/autorun/modules/: Makefile.am
tags/BLACKHOLE/autorun/modules/cdrom/: Makefile.am  cdrom.c
tags/BLACKHOLE/pardus-support/src/: CMakeLists.txt  pardus.h  string.cpp
tags/RELEASE/feedback-0.1/src/: Makefile.am  feedback.cpp  feedback.h  goodbye.cpp  goodbye.h  goodbyedlg.ui  grab_information  hardwareinfo.cpp  hardwareinfo.h  hardwareinfodlg.ui  main.cpp  question.cpp  question.h  questiondlg.ui  welcome.cpp  welcome.h  welcomedlg.ui
tags/RELEASE/zpspell-0.3/: configure.ac  main.cpp  zsconn.cpp
tags/RESTRUCTURED/feedback-2005-12-05/src/: Makefile.am  experience.cpp  experience.h  experiencedlg.ui  feedback.cpp  feedback.desktop  feedback.h  gethwinformation.sh  goodbye.cpp  goodbyedlg.ui  hardwareinfo.cpp  hardwareinfo.h  hardwareinfodlg.ui  main.cpp  opinion.cpp  opinion.h  opiniondlg.ui  purpose.cpp  purpose.h  purposedlg.ui  question.cpp  question.h  questiondlg.ui  usage.cpp  usage.h  usagedlg.ui  welcome.cpp  welcomedlg.ui
tags/kde/kaptan/0.2/src/: Makefile.am  kaptan.cpp  kaptan.h  mousesetupdlg.ui  wallpaperdlg.ui
tags/kde/kaptan/2.2/src/: CMakeLists.txt  goodbye.h  kaptan.cpp  kaptan.desktop  kaptan.h  main.cpp  mouse.h  network.h  style.h  wallpaper.h
tags/kde/knazar/0.2/: AUTHORS  CMakeLists.txt  ChangeLog  README
tags/kde/knazar/0.2/icons/: SConscript
tags/kde/knazar/0.2/po/: de.po  it.po  nl.po  pl.po  pt_BR.po  tr.po
tags/kde/knazar/0.2/src/: SConscript  knazar.cpp  knazar.desktop  knazar.h  knazarballoon.cpp  knazarballoon.h  main.cpp
tags/kde/tasma/1.0.11/src/: Makefile.am  aboutview.h  main.cpp  main.h  tasmamainwin.h  tcategoryview.h  tmodulecategorylist.cpp
tags/kde/tasma/1.1/src/: CMakeLists.txt  main.cpp
tags/kde/tasma/1.2/po/: CMakeLists.txt  ca.po  de.po  es.po  fr.po  nl.po  pl.po  tr.po
tags/kde/tasma/1.2/src/: CMakeLists.txt  aboutview.cpp  main.cpp  tasma.desktop  tasmamainwin.cpp  tasmamainwin.h  tasmaui.rc  tcategoryview.cpp  tcategoryview.h  ticonview.cpp  ticonview.h  tlistviewtooltip.cpp  tlistviewtooltip.h  tmodulegroup.cpp  tmodulegroup.h  tmoduleview.cpp  tmoduleview.h
trunk/kde/dbus-pyqt3-mainloop/src/: CMakeLists.txt  mainloop.cpp  mainloop.h
trunk/kde/kded_kosd/: AUTHORS  CMakeLists.txt  README  kosd.cpp  kosd.desktop  kosd.h  meter.patch  org.kde.KOSD.xml  osd.cpp  osd.h
trunk/kde/kded_kosd/knotify/: CMakeLists.txt  kde.notifyrc  knotify.cpp  notifybyosd.cpp  notifybyosd.h  notifybysound.cpp
trunk/kde/kio-to-local/: CMakeLists.txt  main.cpp
trunk/kde/plasma_runner_pisi/: CMakeLists.txt  README  pisirunner.cpp  pisirunner.h  plasma-runner-pisi.desktop
trunk/kde/plasma_runner_pisi/po/: CMakeLists.txt  Messages.sh  plasma_runner_pisi.pot
trunk/kde/plasma_runner_pisi/po/ca/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/da/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/de/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/es/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/fr/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/hu/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/it/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/nl/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/pl/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/pt_BR/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/ru/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/sv/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/tr/: CMakeLists.txt
trunk/kde/plasma_runner_pisi/po/uk/: CMakeLists.txt
trunk/kde/tasma/applnk/: CMakeLists.txt  kde-settings.menu  tasma-localization.directory  tasma-network.directory  tasma-peripherals.directory  tasma-sound.directory  tasma-useraccount.directory
trunk/kde/tasma/applnk/desktop/: CMakeLists.txt  tasmaarts.desktop  tasmabell.desktop  tasmaclock.desktop  tasmacomponentchooser.desktop  tasmacrypto.desktop  tasmadisplay.desktop  tasmafiletypes.desktop  tasmafontinstaller.desktop  tasmafonts.desktop  tasmajoystick.desktop  tasmakcmaccess.desktop  tasmakcmlirc.desktop  tasmakcmsmserver.desktop  tasmakdm.desktop  tasmakeyboard.desktop  tasmakeyboard_layout.desktop  tasmakeys.desktop  tasmakhotkeys.desktop  tasmaksplashthememgr.desktop  tasmamedia.desktop  (+8 more)
trunk/playground/fatih.arslan/kcmlocale/: CMakeLists.txt  helper.cpp  helper.h  kcmlocale.actions  kcmlocale.cpp  kcmlocale.h  kcmlocalewidget.ui
trunk/playground/gsoc/pulseaudio-ui/: CMakeLists.txt
trunk/ulubot/src/: Makefile.am  command.c  dict.c  import.c  jabber.c  main.c  prefs.c
trunk/zemberek-pardus/zpspell/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  config.h.cmake  main.cpp  zsconn.cpp  zsconn.h
(+10818 files in other folders)
