cmake_minimum_required(VERSION 2.6)

ADD_SUBDIRECTORY(icons)

FIND_PACKAGE(KDE3 REQUIRED)

ADD_DEFINITIONS(${QT_DEFINITIONS} ${KDE3_DEFINITIONS})
LINK_DIRECTORIES(${KDE3_LIB_DIR})
INCLUDE_DIRECTORIES( ${KDE3_INCLUDE_DIR} ${QT_INCLUDE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} src )

SET(knazar_SRCS
    src/knazarballoon.cpp
    src/knazar.cpp
    src/main.cpp
)

KDE3_AUTOMOC(${knazar_SRCS})

SET(knazar_DCOP_SKEL_SRCS src/knazardcop.h)
KDE3_ADD_DCOP_SKELS(knazar_SRCS ${knazar_DCOP_SKEL_SRCS})
KDE3_ADD_EXECUTABLE(knazar ${knazar_SRCS})
TARGET_LINK_LIBRARIES(knazar ${QT_AND_KDECORE_LIBS} kdeui )

install(TARGETS knazar DESTINATION bin)
KDE3_INSTALL_ICONS(hicolor)
