add_subdirectory ( nl )
add_subdirectory ( fr )
add_subdirectory ( es )
add_subdirectory ( de )
add_subdirectory ( hu )
add_subdirectory ( sv )
add_subdirectory ( it )
add_subdirectory ( da )
add_subdirectory ( ru )
add_subdirectory ( pl )
add_subdirectory ( tr )
add_subdirectory ( ca )
add_subdirectory ( pt_BR )
